implemented steering pump auxiliaries in declaration mode, renamed declaration classes (removed declaration from name, because it is already in namespace)

--- a/VectoCore/VectoCore.csproj
+++ b/VectoCore/VectoCore.csproj
@@ -122,18 +122,22 @@
     <Compile Include="Models\Connector\Ports\Impl\Response.cs" />
     <Compile Include="Models\Connector\Ports\IFvPort.cs" />
     <Compile Include="Models\Connector\Ports\ITnPort.cs" />
+    <Compile Include="Models\Declaration\Fan.cs" />
+    <Compile Include="Models\Declaration\HVAC.cs" />
+    <Compile Include="Models\Declaration\PneumaticSystem.cs" />
+    <Compile Include="Models\Declaration\SteeringPump.cs" />
     <Compile Include="Models\SimulationComponent\Data\AccelerationCurve.cs" />
     <Compile Include="Models\Declaration\DeclarationData.cs" />
-    <Compile Include="Models\Declaration\DeclarationPT1.cs" />
+    <Compile Include="Models\Declaration\PT1.cs" />
     <Compile Include="Models\Declaration\ElectricSystem.cs" />
     <Compile Include="Models\Declaration\LookupData.cs" />
-    <Compile Include="Models\Declaration\Declaration.cs" />
-    <Compile Include="Models\Declaration\DeclarationWheels.cs" />
+    <Compile Include="Models\Declaration\Rims.cs" />
+    <Compile Include="Models\Declaration\Wheels.cs" />
     <Compile Include="Models\Declaration\Mission.cs" />
     <Compile Include="Models\Declaration\MissionType.cs" />
     <Compile Include="Utils\RessourceHelper.cs" />
     <Compile Include="Models\Declaration\Segment.cs" />
-    <Compile Include="Models\Declaration\DeclarationSegments.cs" />
+    <Compile Include="Models\Declaration\Segments.cs" />
     <Compile Include="Models\SimulationComponent\Data\AuxiliaryCycleDataAdapter.cs" />
     <Compile Include="Models\Declaration\Axle.cs" />
     <Compile Include="Models\Declaration\AxleConfiguration.cs" />
