adjustments for new declaration files (and formats)

--- a/VectoCore/VectoCore.csproj
+++ b/VectoCore/VectoCore.csproj
@@ -226,28 +226,27 @@
     <EmbeddedResource Include="Resources\Declaration\Rims.csv" />
     <EmbeddedResource Include="Resources\Declaration\Wheels.csv" />
     <EmbeddedResource Include="Resources\Declaration\SegmentTable.csv" />
-    <EmbeddedResource Include="Resources\Declaration\MissionCycles\HeavyUrban.vdri" />
-    <EmbeddedResource Include="Resources\Declaration\MissionCycles\Suburban.vdri" />
-    <EmbeddedResource Include="Resources\Declaration\MissionCycles\Urban.vdri" />
     <EmbeddedResource Include="Resources\Declaration\MissionCycles\Coach.vdri" />
     <EmbeddedResource Include="Resources\Declaration\MissionCycles\Construction.vdri" />
     <EmbeddedResource Include="Resources\Declaration\MissionCycles\Interurban.vdri" />
-    <EmbeddedResource Include="Resources\Declaration\MissionCycles\LongHaul.vdri" />
-    <EmbeddedResource Include="Resources\Declaration\MissionCycles\MunicipalUtility.vdri" />
-    <EmbeddedResource Include="Resources\Declaration\MissionCycles\RegionalDelivery.vdri" />
-    <EmbeddedResource Include="Resources\Declaration\MissionCycles\UrbanDelivery.vdri" />
     <EmbeddedResource Include="Resources\Declaration\PT1.csv" />
     <EmbeddedResource Include="Resources\Declaration\VACC\Truck.vacc" />
-    <EmbeddedResource Include="Resources\Declaration\VCDV\CoachBus.vcdv" />
-    <EmbeddedResource Include="Resources\Declaration\VCDV\RigidSolo.vcdv" />
-    <EmbeddedResource Include="Resources\Declaration\VCDV\RigidTrailer.vcdv" />
-    <EmbeddedResource Include="Resources\Declaration\VCDV\TractorSemitrailer.vcdv" />
     <EmbeddedResource Include="Resources\Declaration\VAUX\ES-Tech.csv" />
     <EmbeddedResource Include="Resources\Declaration\VAUX\Fan-Tech.csv" />
     <EmbeddedResource Include="Resources\Declaration\VAUX\HVAC-Table.csv" />
     <EmbeddedResource Include="Resources\Declaration\VAUX\PS-Table.csv" />
     <EmbeddedResource Include="Resources\Declaration\VAUX\SP-Table.csv" />
     <EmbeddedResource Include="Resources\Declaration\VAUX\SP-Tech.csv" />
+    <EmbeddedResource Include="Resources\Declaration\MissionCycles\HeavyUrban.vdri" />
+    <EmbeddedResource Include="Resources\Declaration\MissionCycles\Suburban.vdri" />
+    <EmbeddedResource Include="Resources\Declaration\MissionCycles\Urban.vdri" />
+    <EmbeddedResource Include="Resources\Declaration\MissionCycles\LongHaul.vdri" />
+    <EmbeddedResource Include="Resources\Declaration\MissionCycles\MunicipalUtility.vdri" />
+    <EmbeddedResource Include="Resources\Declaration\MissionCycles\RegionalDelivery.vdri" />
+    <EmbeddedResource Include="Resources\Declaration\MissionCycles\UrbanDelivery.vdri" />
+    <EmbeddedResource Include="Resources\Declaration\VCDV\parameters.csv" />
+    <EmbeddedResource Include="Resources\Declaration\WHTC-Weighting-Factors.csv" />
+    <EmbeddedResource Include="Resources\Declaration\WHTC.csv" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
