--- a/VectoCoreTest/VectoCoreTest.csproj
+++ b/VectoCoreTest/VectoCoreTest.csproj
@@ -104,7 +104,7 @@
     <Compile Include="Utils\DummyGearbox.cs" />
     <Compile Include="Utils\SITest.cs" />
     <Compile Include="Utils\DelauneyMapTest.cs" />
-    <Compile Include="Utils\TestModalDataWriter.cs" />
+    <Compile Include="Utils\MockModalDataWriter.cs" />
     <Compile Include="Utils\DoubleExtensionMethodTest.cs" />
     <Compile Include="Utils\VectoMathTest.cs" />
   </ItemGroup>
