--- a/VectoCore/VectoCore.csproj
+++ b/VectoCore/VectoCore.csproj
@@ -153,7 +153,8 @@
     <Compile Include="Models\Declaration\MissionType.cs" />
     <Compile Include="Models\SimulationComponent\Data\Engine\PT1Curve.cs" />
     <Compile Include="Models\SimulationComponent\Data\GearFullLoadCurve.cs" />
-    <Compile Include="Models\Simulation\Cockpit\IMileageCounter.cs" />
+    <Compile Include="Models\Simulation\DataBus\IMileageCounter.cs" />
+    <Compile Include="Models\Simulation\DataBus\IRoadLookAhead.cs" />
     <Compile Include="Models\Simulation\Impl\DistanceRun.cs" />
     <Compile Include="Models\Simulation\Impl\PowertrainBuilder.cs" />
     <Compile Include="Models\Simulation\Impl\TimeRun.cs" />
@@ -225,10 +226,10 @@
     <Compile Include="Models\Simulation\Impl\VectoRun.cs" />
     <Compile Include="Models\Simulation\Impl\JobContainer.cs" />
     <Compile Include="Models\Simulation\Impl\VehicleContainer.cs" />
-    <Compile Include="Models\Simulation\Cockpit\ICockpit.cs" />
-    <Compile Include="Models\Simulation\Cockpit\IEngineCockpit.cs" />
-    <Compile Include="Models\Simulation\Cockpit\IGearboxCockpit.cs" />
-    <Compile Include="Models\Simulation\Cockpit\IVehicleCockpit.cs" />
+    <Compile Include="Models\Simulation\DataBus\IDataBus.cs" />
+    <Compile Include="Models\Simulation\DataBus\IEngineInfo.cs" />
+    <Compile Include="Models\Simulation\DataBus\IGearboxInfo.cs" />
+    <Compile Include="Models\Simulation\DataBus\IVehicleInfo.cs" />
     <Compile Include="Models\Simulation\IVehicleContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\StringExtensionMethods.cs" />
