--- a/VectoCoreTest/app.config
+++ b/VectoCoreTest/app.config
@@ -29,7 +29,7 @@
 					layout="${longdate} [${processid}@${machinename}] ${callsite} ${level:uppercase=true}: ${message}" />
 		</targets>
 		<rules>
-			<logger name="*" minlevel="Info" writeTo="LogFile" />
+			<logger name="*" minlevel="Info" writeTo="ConsoleLogger" />
 		</rules>
 	</nlog>
 </configuration>
